# python_package_structure

./: README.md  pyproject.toml
src/package_A/: exampleAOne.py
