[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#packages = ["package_name"]   # if you want to use a folder called "package_name" to store instead of "src"

[project]
name = "python_package_template"
#version = "0.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A template for Python packages"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
all = [
    "matplotlib",
]


[tool.setuptools.dynamic]
version = { file =["version.txt"] }


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
